added airport + some figures

--- a/MMX_Compendium.tex
+++ b/MMX_Compendium.tex
@@ -4,6 +4,11 @@
 \usepackage{hyperref}
 \usepackage{xspace}
 \usepackage[title]{appendix}
+\usepackage{wrapfig}
+\usepackage{graphicx}
+\usepackage{subcaption}
+
+%\usepackage[margin=1.2in]{geometry}
 
 \title{The Mega Man X Compedium}
 
@@ -34,6 +39,11 @@
 
 \begin{appendices}
 	\chapter {Characters}
+	\chapter {Vehicles}
+	\begin{itemize}
+		\item \hyperlink{veichle:Death Rogumer}{Death Rogumer}
+	\end{itemize}
+	
 	\chapter{Enemies}
 	\input{src/enemies.tex}
 \end{appendices}
