--- a/bibliography.bib
+++ b/bibliography.bib
@@ -206,3 +206,16 @@
 	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Flame_Mammoth}
 }
+
+@online{wiki:Airport,
+	author={{Airport Stage}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Airport_Stage}
+}
+
+
+@online{wiki:Storm_eagle,
+	author={{Storm Eagle}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Storm_Eagle}
+}
