--- a/src/enemies.tex
+++ b/src/enemies.tex
@@ -18,12 +18,14 @@
 	\item \hypertarget{enem:Bomb_Been}{Bomb Been}
 	\item \hypertarget{enem:Crusher}{Crusher}
 	\item \hypertarget{enem:Cruiziler}{Cruiziler}
-	\item \hypertarget{enem:Dig_Labour}{Dig Labour} 
+	\item \hypertarget{enem:Dig_Labour}{Dig Labour}
+	\item \hypertarget{enem:Flamer}{Flamer} 
 	\item \hypertarget{enem:Flammingle}{Flammingle}
 	\item \hypertarget{enem:Gulpfer}{Gulpfer}
 	\item \hypertarget{enem:Gun_Volt}{Gun Volt}
 	\item \hypertarget{enem:Hoganmer}{Hoganmer}
 	\item \hypertarget{enem:Jamminger}{Jamminger}
+	\item \hypertarget{enem:Lift Cannon}{Lift Cannon}
 	\item \hypertarget{enem:Mega_Tortoise}{Mega Tortoise}
 	\item \hypertarget{enem:Metal_Wing}{Metal Wing}
 	\item \hypertarget{enem:Metall_C-15}{Metall C-15} 
@@ -36,9 +38,4 @@
 	\item \hypertarget{enem:Snow_Shooter}{Snow Shooter}
 	\item \hypertarget{enem:Spiky}{Spiky}
 	\item \hypertarget{enem:Tombot}{Tombot}
-	
-
-
-
-
 \end{itemize}
