--- a/src/x1.tex
+++ b/src/x1.tex
@@ -7,7 +7,15 @@ In the year 2005 a remake for PlayStation Portable was done, upgrading to a 3D g
 \section[Main plot]{Main plot (X)}
 In the year 21XX humans live peacefully with new kind of robots: reploids. Reploids (\ref{dict:reploids}) are particular type of robots with the ability to take autonomous decisions as well as having feelings and sentiments\cite{Xcoll1:Manual_X1}. However sometimes  a reploid' electric brain can undergo  malfunctioning making him act dangerously for nearby humans and others reploids . When this happen the reploid is labeled as ``Maverick'' and has to be stopped, in order to be repaired or disposed, by a special organization created with the exact purpose to stop mavericks: the Maverick Haunters. Leader of the Maverick Haunters is Sigma, one of the most advanced reploid of the time. 
 
-The situation takes a turn when Sigma himself go maverick, declaring war against humanity and recruiting in its rank other maverick haunters, both willing to follow him or threatened by Sigma himself. In order to stop the war X, the main protagonist of the story, decides to joining the fight alongside Zero (a close friend of him) on the highway under attack, but is stopped by Vile, an ex-haunter released by Sigma from prison, in his ride armor. Only the intervention of Zero himself, which force Vile to flee, allow X to escape safely. The two then decide to split: while Zero goes to locate the enemy fortress, X has to deal with the threat of Sigma's mavericks. As X defeats all the eight mavericks, acquiring in the process new power-ups and strength, he joins Zero who in the meanwhile has located the Sigma fortress flying over the sea. At the entrance however they are immediately confronted with Vile and his ride armor, which first manages to capture Zero (that challenged him in a one-versus-one fight) and subsequently X too. As Vile laughs at his victory, Zero manages to escape from his cage, latches on the ride armor and detonates himself, destroying it but leaving Vile untouched. Seeing his friend's action give X new energy, allowing him to break free too and face Vile, now vulnerable, defeating him in the process. Before going on however X listens to Zero's ultimate words\cite{wiki:MMX_script}. Zero informs X that his auto-repair system cannot handle all damages taken and that X has a power even greater than his own, which makes him capable of face Sigma (eventually Zero also gives X his own Z-buster if he didn't manage to get his own buster upgrade). After that, Zero dies and X proceeds infiltrating Sigma's fortress and his dangers, including re-facing all the previously-defeated mavericks. At the end X arrives at Sigma's place where Sigma is waiting. At first Sigma acts with arrogance, looking surprised that X has managed to reach him with his only forces and claiming he could destroy him without effort. However he decides to leave the pleasure to his pet Velguarder, as he leaves the scene to assist at the fight. After X successfully manages to destroy Velguarder, Sigma changes his mind a little, understanding why Zero placed his trust in X and claiming X could have been an haunter as strong as he was. After that he proceeds to confront X, but gets defeat and his body destroyed, only his head remaining which merges with a giant wolf-based mechaniloid in the room, giving Sigma a new body to fight X. However X succeeds in destroying the new body as well, effectively getting rid of Sigma for good. As Sigma blames X for destroying his dream of a world only for reploids, Sigma himself and the fortress start to explode, forcing X to teleport to the outside. In the end X ponders about the destruction he helped to generate, on the sacrifices made for the victory, and questioning if choosing to fight was the right choice, meditating if another option was possible. As the flying fortress sinks in the ocean, X realizes that he will have to fight more battles before having the answers he needs. 
+The situation takes a turn when Sigma himself go maverick, declaring war against humanity and recruiting in its rank other maverick haunters, both willing to follow him or threatened by Sigma himself. In order to stop the war X, the main protagonist of the story, decides to joining the fight alongside Zero (a close friend of him) on the highway under attack, but is stopped by Vile,
+\begin{wrapfigure}{r}{0.4\linewidth}
+	\centering
+	\includegraphics[width=\linewidth]{figures/X1/Highway_screenshot_4.jpg}
+	\caption{Vile capturing X.}
+	%	\label{fig:myfig}
+\end{wrapfigure} an ex-haunter released by Sigma from prison, in his ride armor. Only the intervention of Zero himself, which force Vile to flee, allow X to escape safely.
+
+The two then decide to split: while Zero goes to locate the enemy fortress, X has to deal with the threat of Sigma's mavericks. As X defeats all the eight mavericks, acquiring in the process new power-ups and strength, he joins Zero who in the meanwhile has located the Sigma fortress flying over the sea. At the entrance however they are immediately confronted with Vile and his ride armor, which first manages to capture Zero (that challenged him in a one-versus-one fight) and subsequently X too. As Vile laughs at his victory, Zero manages to escape from his cage, latches on the ride armor and detonates himself, destroying it but leaving Vile untouched. Seeing his friend's action give X new energy, allowing him to break free too and face Vile, now vulnerable, defeating him in the process. Before going on however X listens to Zero's ultimate words\cite{wiki:MMX_script}. Zero informs X that his auto-repair system cannot handle all damages taken and that X has a power even greater than his own, which makes him capable of face Sigma (eventually Zero also gives X his own Z-buster if he didn't manage to get his own buster upgrade). After that, Zero dies and X proceeds infiltrating Sigma's fortress and his dangers, including re-facing all the previously-defeated mavericks. At the end X arrives at Sigma's place where Sigma is waiting. At first Sigma acts with arrogance, looking surprised that X has managed to reach him with his only forces and claiming he could destroy him without effort. However he decides to leave the pleasure to his pet Velguarder, as he leaves the scene to assist at the fight. After X successfully manages to destroy Velguarder, Sigma changes his mind a little, understanding why Zero placed his trust in X and claiming X could have been an haunter as strong as he was. After that he proceeds to confront X, but gets defeat and his body destroyed, only his head remaining which merges with a giant wolf-based mechaniloid in the room, giving Sigma a new body to fight X. However X succeeds in destroying the new body as well, effectively getting rid of Sigma for good. As Sigma blames X for destroying his dream of a world only for reploids, Sigma himself and the fortress start to explode, forcing X to teleport to the outside. In the end X ponders about the destruction he helped to generate, on the sacrifices made for the victory, and questioning if choosing to fight was the right choice, meditating if another option was possible. As the flying fortress sinks in the ocean, X realizes that he will have to fight more battles before having the answers he needs. 
 After the game's credits, it is then revealed that the next battle will not take long before occurring, since a message form Sigma is played, where the maverick states that his spirit is still intact and waiting for a new body to be built for face X again.
 
 \section{Main Plot (\mhx)}
@@ -82,6 +90,11 @@ While exploring stages X can run into one of the four capsules hidden by Dr. Lig
 The First Armor is composed by the following parts:
 \begin{itemize}
 	\item Foot Parts: Namely ``Emergency Acceleration System''\cite{X:Manual} allow X to dash forward, as well as to perform dash-jumps and wall dash-jumps as well as reducing his hitbox's height a little while dashing. Moreover X can destroy specifics blocks by wall-jumping onto them. The capsule containing the foot parts reside right in the middle of the Snow Mountain Stage, being mandatory to take. In \mhx the capsule is instead at the beginning of Factory stage.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.5\textwidth]{figures/X1/Armor_foot.jpg}
+		\caption{Foot Part capsule location}
+	\end{figure}
 	
 	\item Body Parts: When equipped, X will have all incoming damage reduced by 50\%. It is found in the Forest stage after climbing the wall right before the cave. After defeating RT-55J the capsule will emerge from the ground. Meanwhile \textit{Maverick Haunter X} has moved it in Storm Eagle Stage, requiring the head part to access it.
 	
@@ -103,7 +116,7 @@ Here are listed some useful techniques which the game does not explain but can b
 	
 	\item Wall dash-jump: With the dash upgrade, X cannot only dash and dash-jump for greater heights, but can also do it off walls, which can be very useful especially in bosses rooms to jump from a side to the other.
 	
-	\item Dash shots. If X shoots un uncharged shot while dashing, the projectile will deal two points of damage rather than one. This only apply for one projectile on screen at the time, so shooting multiple projectiles while dashing will give the damage boost only to the first, until it collides or exits from screen.
+	\item Dash shots. If X shoots un uncharged shot while dashing, the projectile will deal two points of damage rather than one. This only apply for one projectile on screen at the time, so shooting multiple projectiles while dashing will give the damage boost only to the first, until it collides or exits from screen (see the file videos/dahs\_shot.mp4 for a practical demonstration).
 	
 	\item Slope jumps: If X jumps while walking down a slope, he will jump higher than normal.
 	
@@ -113,7 +126,30 @@ Here are listed some useful techniques which the game does not explain but can b
 \end{itemize}
 
 \section{Highway Stage}
-The Highway Stage (Central HighWay in \mhx) is the first stage of the game. X arrives here in order to join the fight against Sigma's forces. The stage is rather straightforward, having X to travel while eliminating different enemies, while also teaching the player some basic mechanics such as wall-jumping.  The stage can be split into two main sections\cite{stratwiki:HighWay}, the second one having more gaps and pieces of the highway falling as X stands on (recognizable by a darker texture color). In the first section of the highway two sub-bosses are presents in form of Bee Bladers\ref{minibossBee_Bladers}. At the end of the stage X will be attacked by Death Rogumer, which will start sending towards him several Road Attackers(\ref{enem:Road_attackers}). Once some of them have been destroyed, Vile will drop out the airship and start attacking X with his ride armor. Vile is literally invincible, so there is no point in fighting. Instead as X drop below a certain amount of energy Vile will start shooting an energy projectile toward X and has soon as it connects, X gets trapped and the fight ends, starting the cutscene with Zero saving X. A common speedrun  technique involve having X getting hurt in order to start the boss fight with low health, which will force Vile to shoot the trapping projectile and then run into it, basically skipping the entire fight. Attention however has to be made, since Vile will not stop attacking with the armor, which may results in the player being defeated.
+The Highway Stage (Central HighWay in \textit{Maverick Haunter X}) is the first stage of the game. X arrives here in order to join the fight against Sigma's forces.
+\begin{wrapfigure}{r}{0.4\linewidth}
+	\centering
+	\includegraphics[width=\linewidth]{figures/X1/Highway_screenshot_1.jpg}
+	\caption{X fighting on the highway.}
+\end{wrapfigure}
+
+
+ The stage is rather straightforward, having X to travel while eliminating different enemies, while also teaching the player some basic mechanics such as wall-jumping.  The stage can be split into two main sections\cite{stratwiki:HighWay}, the second one having more gaps and pieces of the highway falling as X stands on (recognizable by a darker texture color). In the first section of the highway two sub-bosses are presents in form of \hyperlink{miniboss:Bee_Blader}{Bee Blader}. At the end of the stage X will be attacked by Death Rogumer, which will start sending towards him several \hyperlink{enem:Road_Attackers}{Road Attackers}.
+% 
+% \begin{wrapfigure}{l}{0.4\linewidth}
+% 	\centering
+% 	\includegraphics[width=\linewidth]{figures/X1/Highway_screenshot_3.jpg}
+% 	\caption{Road Attackers dropping from the Death Rogumer.}
+% \end{wrapfigure}
+ 
+ Once some of them have been destroyed, Vile will drop out the airship and start attacking X with his ride armor. Vile is literally invincible, so there is 
+ \begin{wrapfigure}[10]{l}{0.4\linewidth}
+ 	\vspace{-10pt}
+ 	\centering
+ 	\includegraphics[width=\linewidth]{figures/X1/Highway_screenshot_2.jpg}
+ 	\caption{Road Runner dropping on the highway.}
+ \end{wrapfigure}
+ no point in fighting. Instead as X drop below a certain amount of energy Vile will start shooting an energy projectile toward X and has soon as it connects, X gets trapped and the fight ends, starting the cutscene with Zero saving X. A common speedrun  technique involve having X getting hurt in order to start the boss fight with low health, which will force Vile to shoot the trapping projectile and then run into it, basically skipping the entire fight.  Attention however has to be made, since Vile will not stop attacking with the armor, which may results in the player being defeated.
 
 This stage contains following enemies\cite{wiki:Highway}:
 \begin{itemize}
@@ -126,6 +162,12 @@ This stage contains following enemies\cite{wiki:Highway}:
 	\item \hyperlink{enem:Spiky}{Spiky }
 	\item \hyperlink{miniboss:Bee_Blader}{Bee Blader }
 \end{itemize}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.6\linewidth]{figures/X1/Highway_screenshot_3.jpg}
+	\caption{Vile preparing to face X}
+\end{figure}
  
 \section{Ocean}
 The \textit{Ocean stage} (later renamed Subterranean Base in \mhx) is where Launch Octopus hides himself. Here X starts from the shoreline to immerse short after the beginning of the level. Once underwater X will jump higher than normal which, combined with the dash-jump and the beginning of the level being placed on top of a cliff, making the player capable of skipping a good portion of the first part of the underwater scenario\cite{stratwiki:Ocean}. Various fish-based enemies are present, but main difficulties of the sub-bosses the stage has, being three plus an optional one. In the first part main difficulties are given by spiked pit which X has to jump and from where Sea Attacker will spawn in group of three, interrupting X's jump and making him fall into the pit, and from the two Angler sub bosses, the second one being particular dangerous, since the floor has two spiked pits and the Angler will keep using his vacuum attack to push/pull X into them. Here the best strategy consists in stay at the leftmost platform and keep shooting, dashing to the right once it start pulling and shooting while it pushes X. Other than that Anglers will also shoot X four serpent-shaped harpoon which will move horizontally and then fall onto X when they're above him. Finally Anglers will rarely shoot a beam of light from their lamp, which can also be destroyed. After passing the second sub-boss the second part of the stage begins. Here spiked gaps are rarer (although still present) and whirlpools will start to appear at regular intervals and in specific positions. Those whirlpools can be used to propel X up to the ocean's surface. Proceeding in the stage bombs will start dropping from above, fired by a Cruiziler enemy. X can either climb a whirlpool to get onto it and destroy its core, making it sink and stop it from shooting bombs, or avoiding it and proceed in the level. Once passed falling bombs, X will find himself into an arena filled with sand. Here an Utuboros will start attacking him, rising from the sand, than swimming for a while and then immerse again in the sand. It is invincible for most of its body (which X can stand on), only the head and tail being vulnerable. Although its weakness is considered to be the Boomerang Cutter, due to lack of invincibility frame a single Storm Tornado fired behind its head will destroy him in one shot\cite{wiki:Utuboros}. After this other sub-boss X will have go on only for a little before finding himself in front of the boss door.
@@ -168,20 +210,68 @@ The stage contains following enemies\cite{wiki:Snow_mountain}:
 	\item \hyperlink{enem:Spiky}{Spiky}
 	\item \hyperlink{enem:Tombot}{Tombot}
 \end{itemize}
-\subsection{Foot Parts}
+\subsection{Foot Parts}\label{X:Foot_Parts}
 This stage contains the Armor capsule for the Foot Parts, which allows X to dash, moving faster, perform dash-jumps and wall dash-jumps and alse reducing a little the height of this hitbox. The capsule is found on directly path after having climbed the first part of the cave. Since it is right in the middle of the path it is not avoidable, making it the only mandatory capsule of the entire series.
-
+	\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.5\textwidth]{figures/X1/Armor_foot.jpg}
+	\caption{Foot Part capsule location}
+\end{figure}
 \subsection{Heart Tank}\label{Penguin:heart_tank}
 The Heart Tank of this stage is hidden in the last igloo X meet before facing the section with snow balls. To reach it X has to jump using the Ride Armor. Right after the first igloo there is a light blue column, right before the cave with the enemy Ride Armor. From the top of the column the player has to jump with the armor and, once reached the maximum height, jump out of it in order to reach the wall which brings to the upper path. Here two other igloo are found which can be destroyed, now that the armor is gone, by using the Fire Wave weapon. In particular the last one contains the searched Heart Tank.
 
 \subsection{Chill Penguin}\label{boss:Chill_Penguin}
 The ''\textit{Lord of the Snowy Plains}``\cite{MHX:manual} (''\textit{Emperor of the Snowfield}``\cite{wayback:X_resources}), better known as Chill Penguin was a reploid of the 13th Polar Division, specifically designed for operating in polar environments also tanks to his small-size body. However due to the long permanence in the South Pole, away from civilization, Chill Penguin grown tired of his mission, seeking a way to get away from there. Sigma's rebellion give him exactly what he needed to get away, allowing him to escape and join Sigma in his fight. There are however some differences in how his story is told between \x and \textit{Maverick Haunter X}. In the former, after Sigma starts his revolt, Chill Penguin autonomously eliminated his own commander and escaped to join Sigma while also returning to the civilization\cite{Xcoll1:Manual_X1}. Once arrived Chill Penguin seized a mountain base in order to crush nearby cities using avalanches. Meanwhile in the remake it is Sigma himself which took away Chill Penguin from the South Pole by making him join the 17th division together with X and Zero, even before the revolution's beginning\cite{MHX:manual}. Later, while facing X, Chill Penguin revealed that, beside leaving the South Pole, he also joined the revolt due the payment Sigma gave him\cite{wiki:MMX_script}. Another minor difference with the original version is that, in the remake, Chill Penguin seized an abandoned missile base, hinting his purpose was to use it to attack the cities. He's known to be a belligerent, rowdy (sometimes even warped) individual, while also having trouble with his partner Flame Mammoth (\ref{boss:Flame_mammoth}) due his jealously of Mammoth size and the latter attitude of bullying smaller reploids.
 
-Chill Penguin is often considered the easiest boss of the game and the first one a player must face due the simplicity of avoiding his attacks, also thanks to the Foot Parts the stage give to the player. He has four main attack which will perform at random\cite{wiki:Chill_Penguin}. When he use his Shotgun Ice, Chill Penguin will shot four frozen projectiles which travel in a straight line, although some of them can fall off and slide on the ground, which shatter upon contact with a wall but can nullify X shot if the two met. Other times instead of his projectiles he will emit snow which will create two penguin-shaped ice sculpture and, if X is in range, will also freeze him in place. Sculptures act both as obstacles (X takes damage if he makes contact with them) and as cover since both X and Chill Penguin projectiles will be stopped by them. However X shots can damage and eventually break them. In some occasion Chill Penguin will leap in the air and grab the hook on the ceiling, unleashing a blizzard which will push X and the statues (if present) against a wall. When the sculpture hit a wall they shatter. Finally he can also slide on the floor for a while, turning immediately in case he hits a wall. While in this state he is invincible, but will also get rid the sculpture he creates.  As it is possible to see, Chill Penguins attacks only cover the low part of the arena, meaning the best strategy to fight him consist in staying on the higher part via continuous wall-jumps, only dropping to hit him when possible. Attention however must be made, since sometimes Chill Penguin will perform a high jump toward X position which can hit him even if he's  in the high corner of the room. Beside that he can be hit at any times, even when grabbing the hook, beside when sliding. He's weakness is the Fire Wave, which will burn and stun him for a while, but it has no other particular effect.
+
+\begin{figure}[h]
+	\centering
+	\begin{subfigure}{0.5\textwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/X1/Chill_shot.jpg}
+		\caption{}
+	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/X1/Chill_frozen.jpg}
+		\caption{}
+	\end{subfigure}\\
+	\begin{subfigure}{0.5\textwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/X1/Chill_shatter.jpg}
+		\caption{}
+	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/X1/Chill_slide.jpg}
+		\caption{}
+	\end{subfigure}\\
+	\begin{subfigure}{0.5\textwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/X1/Chill_blizzard.jpg}
+		\caption{}
+		
+	\end{subfigure}
+	%	\begin{minipage}{0.49\textwidth}
+	%		\centering
+	%		\includegraphics[width=\linewidth]{figures/X1/Chill_burn.jpg}
+	%	\end{minipage}
+	\caption{Chill Penguin's attack: (a) Shotgun Ice, (b) X frozen near the two ice statues, (c) Chill Penguin's shotgun ice stopped by his own statues, (d) Chill Penguin slide attack and (e) blizzard attack.}
+	
+\end{figure}
+Chill Penguin is often considered the easiest boss of the game and the first one a player must face due the simplicity of avoiding his attacks, also thanks to the Foot Parts the stage give to the player. He has four main attack which will perform at random\cite{wiki:Chill_Penguin}. When he use his Shotgun Ice, Chill Penguin will shot four frozen projectiles which travel in a straight line, although some of them  can fall off and slide on the ground, which shatter upon contact with a wall but can nullify X shot if the two met. Other times instead of his projectiles he will emit snow which will create two penguin-shaped ice sculpture and, if X is in range, will also freeze him in place. Sculptures act both as obstacles (X takes damage if he makes contact with them) and as cover since both X and Chill Penguin projectiles will be stopped by them.However X shots can damage and eventually break them. In some occasion Chill Penguin will leap in the air and grab the hook on the ceiling, unleashing a blizzard which will push X and the statues (if present) against a wall. When the sculpture hit a wall they shatter. Finally he can also slide on the floor for a while, turning immediately in case he hits a wall. While in this state he is invincible, but will also get rid the sculpture he creates.  As it is possible to see, Chill Penguins attacks only cover the low part of the arena, meaning the best strategy to fight him consist in staying on the higher part via continuous wall-jumps, only dropping to hit him when possible. Attention however must be made, since sometimes Chill Penguin will perform a high jump toward X position which can hit him even if he's  in the high corner of the room. Beside that he can be hit at any times, even when grabbing the hook, beside when sliding. He's weakness is the Fire Wave, which will burn and stun him for a while, but it has no other particular effect.
+
 
 After defeating him X will gain the Shotgun Ice(\ref{Shotgun_ice}) weapon as well as freezing the lava in the Factory Stage, considerably reducing the danger level of the stage.
 
 Chill Penguin is 163 cm tall and 108 Kg heavy, despite the information screen on the game report different(\ref{Penguin_specs}).
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.5\linewidth]{figures/X1/Chill_penguin_specs.jpg}
+	\caption{Chill Penguin specifications according to X1.}
+	\label{Penguin_specs}
+\end{figure}
 
 \section{Gallery}
 The Gallery Stage (or Energy Mines Ruins in \mhx) is the stage where controlled by Armored Armadillo. Peculiarity of this level are its mine cart which X can stand and, as soon as he does it, they start moving following the track, increasing their speed as they keep going and destroying all enemies that enter in contact with it. Hoever the player must be careful, as all the carts end their run into pits, bringing X down with them if he doesn't jump off at the right moment. This stage is also famous for containing the secret Light's capsule which teach X the Hadouken technique, as well as being the best place to farm health capsule and lives.
@@ -255,6 +345,36 @@ By beating Flame Mammoth X gain the Fire Wave (\ref{Fire_wave}) and, by conseque
 
 According to data available, Flame Mammoth is 321 cm tall and 327 Kg heavy (slightly heavier than what portrayed in game).
 \section{Airport}
+In the \textit{Airport stage} (or \textit{New Type Airport} in the remake) X starts from the ground and has to climb up the airport structures in order to reach the Death Rogurmer as it leaves, in order to destroy it. 
+
+The stage focus mainly on platforming above bottomless pit and on moving platforms, as it takes place in the sky. Various enemies are also placed on some of this platform in order to obstacle X while jumping. X starts on the ground and has immediately to climb using some moving platforms to reach the airport's roof, while some \hyperlink{enem:Sky_Claw}{Sky Claws} try to grub him and make him fall into the pit. After reaching the roof, X can either continue along it, fighting more enemies while going, or can destroy the lift cannon at the beginning , and use the platform it leaves behind to reach the top of the nearby tower, where X can enter after destroying the window and go through, skipping below enemies. Next is a platforming section with a series of platform which move up and down in an alternate way. Furthermore on some of them \hyperlink{enem:Flamer}{Flamers} are positioned, which have a good horizontal range and must destroyed in order for X to step on the platform. However they are positioned every other platform, meaning the player can skip them, by dash-jumping from the platform X stands when it's at the peak (meaning the next one with the enemy is lower) and landing two platforms ahead, in an empty one. Following this part, there is a pretty straightforward section where X has to defeat more enemies in order to proceed. Finally the last part begins with a series of three platforms above a bottomless pit which will proceed to fall as X steps on them, giving the player few time to jump onto the following one. Passed this X will reach the Death Rogumer itself and, after passing its two cannons, X will stand in front of the boss door. On the far right of the ship, before entering the boss, a weapon tank and a health tank are present onto the ship wing.
+
+The stage has the following enemies\cite{wiki:Airport}:
+\begin{itemize}
+	\item \hyperlink{enem:Ball_De_Voux}{Ball De Voux }
+	\item \hyperlink{enem:Flamer}{Flamer}
+	\item \hyperlink{enem:Gun_Volt}{Gun Volt}
+	\item \hyperlink{enem:Hoganmer}{Hoganmer}
+	\item \hyperlink{enem:Lift Cannon}{Lift Cannon}
+	\item \hyperlink{enem:Metall_C-15}{Metall C-15}
+	\item \hyperlink{enem:Sky_Claw}{Sky Claw}
+	\item \hyperlink{veichle:Death Rogumer}{Death Rogumer}'s cannons
+\end{itemize}
+
+\subsection{Heart Tank}
+Right at the beginning of the stage, if when the rising platform reaches its top X jumps left instead of right will land onto a platform right above the starting point but not accessible from below. On this platform is where the Heart Tank is.
+
+\subsection{Sub Tank}
+After reaching the Airport roof the player will find a 	\hyperlink{enem:Lift_cannon}{Lift Cannon}, a cannon on top of a platform which will rise and lower as the cannon spins. Once destroyed the cannon the platform will fall down, only to rise again as X stands on it, to bring him near a window X can destroy and enter the tower. Here a \hyperlink{enem:Gun_Volt}{Gun Volt} is present and, as X destroys it, all windows will shatter, opening and exit on the opposite side X has entered. At the end of the tower is where the Sub Tank is. 
+ 
+\subsection{Head Parts} 
+ While traveling the stage the player may notice that in some locations there are canisters bearing a flammable mark onto them. While it is logical to think the Fire Wave weapon is necessary to detonate them, this is not true and X buster's charged shots can work as well, only requiring few more shots. While most of them only hide health tanks or life up, the one near the pylon after the sequence with moving platforms hides a secret path which leads to the Head Parts. 
+ \subsection{Storm Eagle}\label{boss:Storm_Eagle}
+ Storm Eagle was the taciturn, calm, careful strategist and leader of the Maverick Hunters' 7th Airborne Unit\cite{wiki:Storm_Eagle}. Although not talking much and being difficult to approach, Storm Eagle was a very popular leader among his men\cite{MHX:manual}. Loyal to his job as Maverick Haunter, when the rebellion broke out Eagle's first reaction was to haunt down and challenge Sigma. However Sigma was no match for him, and Storm Eagle was forced to surrender. It not clear however if him joining Sigma was mostly due simply to an self-preservation instinct (as the original game and the collection hint\cite{Xcoll1:Manual_X1}) or due his pride, which forced him to follow Sigma even if reluctant (hinted in remake). In both cases Storm Eagle ended up controlling the Death Rogumer, a new type of aerial battleship (the same one X meets at the end of the Highway Stage from which Vile descends).
+ 
+ The difficulty of the battle against Storm Eagle can vary a lot depending on whether X has already obtained the Foot Parts(\ref{X:Foot_Parts}). This is due the fact that most of Storm Eagle's attacks (two out of four) revolve around pushing X off the arena (which is only a long platform onto of a pit with no walls) and the dash completely nullify these attacks. In particular these two attack are his Gust\cite{wiki:Storm_Eagle} and Storm Tornado. The former sees Eagle flapping his wings to create a rush of air which push X away at a slow rate and simply walking can prevent X from falling, if he has enough space left, while the latter generates a horizontal tornado which doesn't deal any damage but push X much faster and, without dashing through, can be hard to counter. Next Storm Eagle has his Diving attack, that makes him rise out of the screen to dive-bomb diagonally onto X several times before returning on the ground. X can either focus on dodging Eagle, which should be rather simple as the arena is enough tall and wide to see Eagle diving in advance, or can even try to hit him, as he's not invincible while performing this attack. Finally Storm Eagle has his Bird Summon attack, that consists in him shooting out an egg from his beak while hovering mid-air and, if the egg hits the ground, it hatches into four mini bird-like robots which fly towards X. Storm Eagle's weakness is the Chameleon Sting which deals him more damage and, thanks to its angle, can hit him better when he's mid-air. Upon defeating him, X will gain the Storm Tornado\ref{Storm_tornado} and, furthermore, the Death Rogumer will crash land onto the Power Plant Stage cutting the electricity in some section, making the level easier to navigate (moreover the the airship will also disappear from the map screen).
+ 
+ Storm Eagle is 250 cm tall and 135 Kg heavy, while he's title is ``\textit{Prince of the Skies}''.
 \section{Tower}
 \section{Power Plant}
 \section{Forest}
