Added Storm Eagle, tower and Boomer Kuwanger

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,18 @@
+@book{book:MH_field_guide,
+	author={David Oxford and Nadia Oxford},
+	publisher = {Udon Entertainement},
+	year = {2021},
+	title = {Megaman X Maverick Haunter Field Guide}
+}
+
+@book{book:MMX_Complete_art,
+	author={{Capcom}},
+	publisher = {Udon Entertainement},
+	year = {2018},
+	title = {Megaman X Official Complete Artwork}
+}
+
+
 @online{wiki:MMX,
 	author={{Mega Man X (video game)}},
 	title={{The Megaman Knowledge Base}},
@@ -219,3 +234,16 @@
 	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Storm_Eagle}
 }
+
+@online{wiki:Tower,
+	author={{Tower Stage}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Tower_Stage}
+}
+
+@online{wiki:Boomer_kuwanger,
+	author={{Boomer Kuwanger}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Boomer_Kuwanger}
+}
+
