--- a/src/enemies.tex
+++ b/src/enemies.tex
@@ -19,12 +19,14 @@
 	\item \hypertarget{enem:Crusher}{Crusher}
 	\item \hypertarget{enem:Cruiziler}{Cruiziler}
 	\item \hypertarget{enem:Dig_Labour}{Dig Labour}
+	\item \hypertarget{enem:Dodge_Blaster}{Dodge Blaster}
 	\item \hypertarget{enem:Flamer}{Flamer} 
 	\item \hypertarget{enem:Flammingle}{Flammingle}
 	\item \hypertarget{enem:Gulpfer}{Gulpfer}
 	\item \hypertarget{enem:Gun_Volt}{Gun Volt}
 	\item \hypertarget{enem:Hoganmer}{Hoganmer}
 	\item \hypertarget{enem:Jamminger}{Jamminger}
+	\item \hypertarget{enem:Ladder_Yadder}{Ladder Yadder}
 	\item \hypertarget{enem:Lift Cannon}{Lift Cannon}
 	\item \hypertarget{enem:Mega_Tortoise}{Mega Tortoise}
 	\item \hypertarget{enem:Metal_Wing}{Metal Wing}
@@ -35,7 +37,11 @@
 	\item \hypertarget{enem:Scrap_Robo}{Scrap Robo}
 	\item \hypertarget{enem:Sea_Attacker}{Sea Attacker}
 	\item \hypertarget{enem:Sky_Claw}{Sky Claw}
+	\item \hypertarget{enem:Sine_Faller}{Sine Faller}
+	\item \hypertarget{enem:Slide_Cannon}{Slide Cannon}
 	\item \hypertarget{enem:Snow_Shooter}{Snow Shooter}
 	\item \hypertarget{enem:Spiky}{Spiky}
 	\item \hypertarget{enem:Tombot}{Tombot}
+	\item \hypertarget{enem:Turn_Cannon}{Turn Cannon}
+
 \end{itemize}
